--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minesweeper-frontend",
+  "name": "frontend",
   "version": "2.0.0",
   "description": "Django + React 지뢰찾기 게임",
   "private": true,
