--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.9.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
