--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@
 # Cloudflare Pages 배포용 환경변수
 
 # API 엔드포인트 (백엔드 배포 후 실제 URL로 변경)
-REACT_APP_API_URL=webgame-inme-c21b.up.railway.app
+REACT_APP_API_URL=https://webgame-inme-c21b.up.railway.app
 
 # 빌드 최적화
 GENERATE_SOURCEMAP=false
